# SATySFi-json

./: .gitignore  README.md  Satyristes  satysfi-json-doc.opam  satysfi-json.opam
doc/: manual-ja.saty
src/: json.satyg  json5.satyg
