opam-version: "2.0"
name: "satysfi-json-doc"
version: "1.1.1"
synopsis: "Document of JSON parser for SATySFi"
description: """
Document of JSON parser for SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/SATySFi-json"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-json.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-json/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-json" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
  "satysfi-code-printer"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "json-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "json-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
