opam-version: "2.0"
name: "satysfi-json"
version: "1.1.1"
synopsis: "JSON parser for SATySFi"
description: """
JSON parser for SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-json"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-json.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-json/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "json"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "json"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
